java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting6/EnumWithoutConstants.java
<error descr="Enum declaration without enum constants cannot have abstract methods">enum MyEnumTest</error> {
  ;
  public abstract void m();
}
